# nft_trader

./: Cargo.toml  README.md  lib.rs
frontend/: pnpm-lock.yaml
frontend/contracts/: build-all.sh  package.json
frontend/contracts/deployments/nft_trader/: nft_trader.contract  nft_trader.json  nft_trader.wasm
frontend/contracts/scripts/: deploy.ts
frontend/contracts/typed-contracts/build-extrinsic/: nft_trader.ts
frontend/contracts/typed-contracts/constructors/: nft_trader.ts
frontend/contracts/typed-contracts/contract-info/: nft_trader.ts
frontend/contracts/typed-contracts/contracts/: nft_trader.ts
frontend/contracts/typed-contracts/data/: nft_trader.json
frontend/contracts/typed-contracts/event-data/: nft_trader.json
frontend/contracts/typed-contracts/event-types/: nft_trader.ts
frontend/contracts/typed-contracts/events/: nft_trader.ts
frontend/contracts/typed-contracts/mixed-methods/: nft_trader.ts
frontend/contracts/typed-contracts/query/: nft_trader.ts
frontend/contracts/typed-contracts/tx-sign-and-send/: nft_trader.ts
frontend/contracts/typed-contracts/types-arguments/: nft_trader.ts
frontend/contracts/typed-contracts/types-returns/: nft_trader.ts
frontend/frontend/: package.json
frontend/frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/frontend/src/app/components/: home-page-title.tsx
frontend/frontend/src/components/ui/: button.tsx  input.tsx
frontend/frontend/src/deployments/: deployments.ts
frontend/frontend/src/utils/: contract-tx-with-toast.tsx  ticker.ts
(+6 files in other folders)
